deployment/chart/network-policy/eric-topology-handling-eai-k6-sef-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: eric-th-k6-sef-policy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: eric-sef-exposure-api-manager
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: topology-handling-k6
